doc-4159-inline-code-spacing-fix (#699)

--- a/themes/doks/assets/scss/components/_code.scss
+++ b/themes/doks/assets/scss/components/_code.scss
@@ -38,7 +38,7 @@ h6 {
 code {
   background: $gray-150;
   color: $black;
-  padding: 0.25rem 0.5rem;
+  padding: 2px 2px;
 }
 
 pre {
